[tool.poetry]
name = "huggingface"
version = "0.1.0"
description = ""
authors = ["wayner_kao <wayner.kao@mile.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.24.0"
torch = "1.12.1"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
